# mboct-fem-pkg

./: .gitignore  COPYING  DESCRIPTION  Dockerfile  INDEX  Makefile  README.md  octave-source.awk  octave-source.sh  run_docker_container.sh
.github/workflows/: Dockerfile  cleanup-cache.yml  docker-hub-publish.yml  docker-publish.yml  html_ref.yml  simple.yml  ubuntu-20-04.yml  ubuntu-latest.yml
inst/: fem_ass_constraint_matrix.m  fem_ass_constraint_matrix_01.tst  fem_cms_constr_elim.m  fem_cms_constr_elim_001.tst  fem_cms_constr_mat.m  fem_cms_constr_mat_001.tst  fem_cms_constr_mat_002.tst  fem_cms_constr_mat_003.tst  fem_cms_constr_mat_004.tst  fem_cms_constr_mat_005.tst  fem_cms_constr_mat_006.tst  fem_cms_constr_mat_007.tst  fem_cms_constr_mat_008.tst  fem_cms_create.m  fem_cms_create2.m  fem_cms_create_001.tst  fem_cms_create_002.tst  fem_cms_create_003.tst  fem_cms_dof_active.m  fem_cms_dof_active_001.tst  fem_cms_export.m  fem_cms_export_001.tst  fem_cms_export_002.tst  fem_cms_matrix_trans.m  fem_cms_matrix_trans_001.tst  fem_cms_matrix_trans_002.tst  fem_cms_matrix_trans_003.tst  fem_cms_matrix_trans_004.tst  fem_cms_matrix_trans_005.tst  fem_cms_red_guyan.m  fem_cms_red_guyan_001.tst  fem_cms_red_guyan_002.tst  fem_cms_rigid_body_trans_mat.m  fem_ehd_pre_comp_mat_export.m  fem_ehd_pre_comp_mat_grid.m  fem_ehd_pre_comp_mat_linear_mesh.m  fem_ehd_pre_comp_mat_linear_mesh_cond_rpt.m  fem_ehd_pre_comp_mat_load.m  fem_ehd_pre_comp_mat_load_case.m  fem_ehd_pre_comp_mat_load_case2.m  (+813 more)
inst/@fem_fact/: eigs_func.m  fem_fact.m  mldivide.m  mrdivide.m
inst/@fem_fact_chol/: eigs_func.m  eigs_post.m  eigs_sym.m  fem_fact_chol.m  mldivide.m
inst/@fem_fact_lu/: fem_fact_lu.m  mldivide.m
inst/@fem_fact_mumps/: fem_fact_mumps.m  mldivide.m
inst/@fem_fact_pardiso/: eigs_func.m  eigs_post.m  eigs_sym.m  fem_fact_pardiso.m  mldivide.m  mrdivide.m
inst/@fem_fact_pastix/: eigs_func.m  eigs_sym.m  fem_fact_pastix.m  mldivide.m  mrdivide.m
inst/@fem_fact_pastix_ref/: eigs_post.m  eigs_sym.m  fem_fact_pastix_ref.m  mldivide.m
inst/@fem_fact_refine/: eigs_func.m  fem_fact_refine.m  mldivide.m  mrdivide.m
inst/@fem_fact_scale/: eigs_func.m  eigs_post.m  eigs_sym.m  fem_fact_scale.m  mldivide.m  mrdivide.m
inst/@fem_fact_strumpack/: fem_fact_strumpack.m  mldivide.m
inst/@fem_fact_umfpack/: eigs_post.m  fem_fact_umfpack.m  mldivide.m  mrdivide.m
inst/@fem_mat_sym/: fem_mat_sym.m  mtimes.m  size.m  subsref.m
src/: Makefile.am  Makefile.in  __mboct_fem_pkg__.cc  bootstrap  config.h.in  configure.ac  fem_pre_mesh_size.cc
